--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title> Halaman A </title>
-<meta http-equiv="refresh" content="3;url=https://rachmat.id">
+<meta http-equiv="refresh" content="3;url=index.php">
 <head>
 <body> Halaman A </body>
 </html>
